[Search] Submenu is no longer aligned correctly

--- a/data/main.css
+++ b/data/main.css
@@ -90,6 +90,7 @@ gclh_nav ul {
     overflow: initial;
     white-space: initial;
     text-overflow: ellipsis;
+    height: 37px;
 }
 .menu>li.mobile {
     display: none;
